@@ -1,3 +1,7 @@
+19/07/10 Julien Dutheil
+* New method isInit in CodonAlphabet.
+* New method getCDS in SequenceTools.
+
 28/04/10 Julien Dutheil
 * New MAF genome alignment parser.
 
